--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.AppTurnos"
         tools:targetApi="31">
         <activity
+            android:name=".LoginFragment"
+            android:exported="false"
+            android:label="@string/title_activity_login_fragment" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppTurnos">
